# osqp_test

./: README.md
matplotlib-cpp-master/: CMakeLists.txt
osqp-eigen_test/: CMakeLists.txt  MPCExample.cpp  quintic_spline_smoother.cpp  simpleExample.cpp
